--- a/index.html
+++ b/index.html
@@ -14,26 +14,30 @@
 
 <body>
     <div id="wrapper">
-        <div id="screen-container">
-            <div id="screen">150 + 325</div>
+        <div id="display-container">
+            <div id="display"></div>
         </div>
         <div id="buttons-container">
-            <button id="b-7" class="button number">7</button>
-            <button id="b-8" class="button number">8</button>
-            <button id="b-9" class="button number">9</button>
-            <button id="b-divide" class="button operator">&#x00F7;</button>
-            <button id="b-4" class="button number">4</button>
-            <button id="b-5" class="button number">5</button>
-            <button id="b-6" class="button number">6</button>
-            <button id="b-multiply" class="button operator">&#x2A2F;</button>
-            <button id="b-1" class="button number">1</button>
-            <button id="b-2" class="button number">2</button>
-            <button id="b-3" class="button number">3</button>
-            <button id="b-substract" class="button operator">&#x2043;</button>
-            <button id="b-0" class="button number">0</button>
-            <button id="b-point" class="button number">.</button>
-            <button id="b-equal" class="button operator">&#x003D;</button>
-            <button id="b-add" class="button operator">&#x002B;</button>
+            <button id="" class="button disabled"></button>
+            <button id="" class="button disabled"></button>
+            <button id="" class="button disabled"></button>
+            <button id="b-clear" class="button reset" value="clear">C</button>
+            <button id="b-7" class="button btn-number" value="7">7</button>
+            <button id="b-8" class="button btn-number" value="8">8</button>
+            <button id="b-9" class="button btn-number" value="9">9</button>
+            <button id="b-divide" class="button btn-operator" value="&#x00F7;">&#x00F7;</button>
+            <button id="b-4" class="button btn-number" value="4">4</button>
+            <button id="b-5" class="button btn-number" value="5">5</button>
+            <button id="b-6" class="button btn-number" value="6">6</button>
+            <button id="b-multiply" class="button btn-operator" value="multiply">&#x2A2F;</button>
+            <button id="b-1" class="button btn-number" value="1">1</button>
+            <button id="b-2" class="button btn-number" value="2">2</button>
+            <button id="b-3" class="button btn-number" value="3">3</button>
+            <button id="b-substract" class="button btn-operator" value="substract">&#x2043;</button>
+            <button id="b-0" class="button btn-number" value="0">0</button>
+            <button id="b-point" class="button btn-number" value="point">.</button>
+            <button id="b-equal" class="button btn-operator" value="equal">&#x003D;</button>
+            <button id="b-add" class="button btn-operator" value="add">&#x002B;</button>
         </div>
     </div>
 </body>
