--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <button id="" class="button disabled"></button>
             <button id="" class="button disabled"></button>
             <button id="" class="button disabled"></button>
-            <button id="b-clear" class="button reset" value="clear">C</button>
+            <button id="b-clear" class="button btn-clear" value="clear">C</button>
             <button id="b-7" class="button btn-number" value="7">7</button>
             <button id="b-8" class="button btn-number" value="8">8</button>
             <button id="b-9" class="button btn-number" value="9">9</button>
-            <button id="b-divide" class="button btn-operator" value="&#x00F7;">&#x00F7;</button>
+            <button id="b-divide" class="button btn-operator" value="divide">&#x00F7;</button>
             <button id="b-4" class="button btn-number" value="4">4</button>
             <button id="b-5" class="button btn-number" value="5">5</button>
             <button id="b-6" class="button btn-number" value="6">6</button>
@@ -35,8 +35,8 @@
             <button id="b-3" class="button btn-number" value="3">3</button>
             <button id="b-substract" class="button btn-operator" value="substract">&#x2043;</button>
             <button id="b-0" class="button btn-number" value="0">0</button>
-            <button id="b-point" class="button btn-number" value="point">.</button>
-            <button id="b-equal" class="button btn-operator" value="equal">&#x003D;</button>
+            <button id="b-point" class="button btn-point" value="point">.</button>
+            <button id="b-equal" class="button btn-equals" value="equals">&#x003D;</button>
             <button id="b-add" class="button btn-operator" value="add">&#x002B;</button>
         </div>
     </div>
