--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button id="b-3" class="button btn-number" value="3">3</button>
             <button id="b-substract" class="button btn-operator" value="substract">&#x2043;</button>
             <button id="b-0" class="button btn-number" value="0">0</button>
-            <button id="b-point" class="button btn-point" value="point">.</button>
+            <button id="b-point" class="button btn-point" value=".">.</button>
             <button id="b-equal" class="button btn-equals" value="equals">&#x003D;</button>
             <button id="b-add" class="button btn-operator" value="add">&#x002B;</button>
         </div>
