--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="wrapper">
         <div id="display-container">
-            <div id="display"></div>
+            <div id="display">0</div>
         </div>
         <div id="buttons-container">
             <button id="" class="button disabled"></button>
