Add backspace button ui and functionality

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <div id="buttons-container">
             <button id="" class="button disabled"></button>
             <button id="" class="button disabled"></button>
-            <button id="" class="button disabled"></button>
+            <button id="b-clear" class="button btn-backspace" value="backspace">&#171;
+            </button>
             <button id="b-clear" class="button btn-clear" value="clear">C</button>
             <button id="b-7" class="button btn-number" value="7">7</button>
             <button id="b-8" class="button btn-number" value="8">8</button>
