--- a/index.html
+++ b/index.html
@@ -18,27 +18,26 @@
             <div id="display">0</div>
         </div>
         <div id="buttons-container">
-            <button id="" class="button disabled"></button>
-            <button id="" class="button disabled"></button>
-            <button id="b-clear" class="button btn-backspace" value="backspace">&#171;
-            </button>
-            <button id="b-clear" class="button btn-clear" value="clear">C</button>
-            <button id="b-7" class="button btn-number" value="7">7</button>
-            <button id="b-8" class="button btn-number" value="8">8</button>
-            <button id="b-9" class="button btn-number" value="9">9</button>
-            <button id="b-divide" class="button btn-operator" value="/">&#x00F7;</button>
-            <button id="b-4" class="button btn-number" value="4">4</button>
-            <button id="b-5" class="button btn-number" value="5">5</button>
-            <button id="b-6" class="button btn-number" value="6">6</button>
-            <button id="b-multiply" class="button btn-operator" value="*">&#x2A2F;</button>
-            <button id="b-1" class="button btn-number" value="1">1</button>
-            <button id="b-2" class="button btn-number" value="2">2</button>
-            <button id="b-3" class="button btn-number" value="3">3</button>
-            <button id="b-substract" class="button btn-operator" value="-">&#x2043;</button>
-            <button id="b-0" class="button btn-number" value="0">0</button>
-            <button id="b-point" class="button btn-point" value=".">.</button>
-            <button id="b-equal" class="button btn-equals" value="equals">&#x003D;</button>
-            <button id="b-add" class="button btn-operator" value="+">&#x002B;</button>
+            <button class="button disabled"></button>
+            <button class="button btn-plus-minus" value="sign">&#xB1;</button>
+            <button class="button btn-backspace" value="backspace">&#171;</button>
+            <button class="button btn-clear" value="clear">C</button>
+            <button class="button btn-number" value="7">7</button>
+            <button class="button btn-number" value="8">8</button>
+            <button class="button btn-number" value="9">9</button>
+            <button class="button btn-operator" value="/">&#x00F7;</button>
+            <button class="button btn-number" value="4">4</button>
+            <button class="button btn-number" value="5">5</button>
+            <button class="button btn-number" value="6">6</button>
+            <button class="button btn-operator" value="*">&#x2A2F;</button>
+            <button class="button btn-number" value="1">1</button>
+            <button class="button btn-number" value="2">2</button>
+            <button class="button btn-number" value="3">3</button>
+            <button class="button btn-operator" value="-">&#x2043;</button>
+            <button class="button btn-number" value="0">0</button>
+            <button class="button btn-point" value=".">.</button>
+            <button class="button btn-equals" value="equals">&#x003D;</button>
+            <button class="button btn-operator" value="+">&#x002B;</button>
         </div>
     </div>
 </body>
